depends_compile_tests/tests/fail/derive/graph/multiple_roots.stderr
error: More than one root node: comments_posts, likes_friends.
 --> tests/fail/derive/graph/multiple_roots.rs:6:10
  |
6 | #[derive(Graph)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Graph` (in Nightly builds, run with -Z macro-backtrace for more info)

error: More than one root node: comments_likes, comments_posts.
  --> tests/fail/derive/graph/multiple_roots.rs:26:10
   |
26 | #[derive(Graph)]
   |          ^^^^^
   |
   = note: this error originates in the derive macro `Graph` (in Nightly builds, run with -Z macro-backtrace for more info)
